--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-KEY_STORE_PATH='./path/to/keystore.json'
-PASSWORD='your_password_here'
+KEY_STORE_PATH='./keystore/keystore1.json'
+PASSWORD='changeit'
+PUBKEY=0xD62F6716547bA54BD0691c88e497c3c989973357
