--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "custom-account-web3signer",
+  "name": "custom-account-keystore",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -15,7 +15,6 @@
     "vitest": "^2.1.5"
   },
   "dependencies": {
-    "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "viem": "^2.21.47"
   }
